--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ display: inline-block;}
         
      <p> <strong>考上什么大学并不重要 ，反正毕业了也是在校门口卖手抓饼</strong>（放面糊）（抹匀）（打蛋）（抹匀）（涂肉酱）（撒豆角）（撒葱花）（放火腿肠）（放脆脆）（放生菜）（打横卷起来）（切一切）（打竖切两段）（叠起来装进纸袋）（装进塑料袋）（递给学弟学妹）（擦汗）（弹出老婆和oc照片看一眼）（继续煎饼）<strong>经顾客反映，将手抓饼招牌换成了煎饼果子</strong>（吹口哨）（自信）（继续摆摊）（被学生投诉）（慌张）（推着车逃离）（去另一个学校门口摆摊） <strong> 谁偷走了我的富二代人生</strong>（跑来跑去）谁啊（仰天长啸） <strong>是不是你偷了我的富二代人生</strong> （揪住衣领） <strong>说啊是不是你</strong> （狠狠盯住） <strong>什么？不是你？</strong> （十分不解） <strong>那是谁偷走了我的富二代人生 是谁啊</strong> （继续奔跑）
            </p>
-           <img src="微信图片_20221027220143.jpg" alt="其实这是一张很好看的照片，可是它打不开了......" title="我还没疯！！">
+           <img src="https://github.com/lvmahu/lvmahu.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20221027220143.jpg" alt="其实这是一张很好看的照片，可是它打不开了......" title="我还没疯！！">
         
            <table border="4" bordercolor="blue" cellpadding="50">
             <tr>
