--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ display: inline-block;}
             <h1 class="f">生</h1>
         <h1 class="r">活</h1> 
   
-        <div><a href=" C:\Users\笔记本\Desktop\新建文件夹\新建文件夹\ddd.html"><strong>秘密</strong></a></div>
+        <div><a href="https://lvmahu.github.io/lv.github.io/"><strong>秘密</strong></a></div>
         
      <p> <strong>考上什么大学并不重要 ，反正毕业了也是在校门口卖手抓饼</strong>（放面糊）（抹匀）（打蛋）（抹匀）（涂肉酱）（撒豆角）（撒葱花）（放火腿肠）（放脆脆）（放生菜）（打横卷起来）（切一切）（打竖切两段）（叠起来装进纸袋）（装进塑料袋）（递给学弟学妹）（擦汗）（弹出老婆和oc照片看一眼）（继续煎饼）<strong>经顾客反映，将手抓饼招牌换成了煎饼果子</strong>（吹口哨）（自信）（继续摆摊）（被学生投诉）（慌张）（推着车逃离）（去另一个学校门口摆摊） <strong> 谁偷走了我的富二代人生</strong>（跑来跑去）谁啊（仰天长啸） <strong>是不是你偷了我的富二代人生</strong> （揪住衣领） <strong>说啊是不是你</strong> （狠狠盯住） <strong>什么？不是你？</strong> （十分不解） <strong>那是谁偷走了我的富二代人生 是谁啊</strong> （继续奔跑）
            </p>
